--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,9 @@ soupsieve==2.6
 sqlparse==0.5.2
 tomli==2.1.0
 yapf==0.43.0
+Django==5.1.1
+Pillow==9.3.0
+psycopg2-binary==2.9.9
+gunicorn==20.1.0
+python-dotenv==1.0.0
+django-bootstrap5==21.3
